-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.0, 6.4.3, 6.5.0
-
-
a43f349f9 (dev), 8cec4270a (6.5), 4b73de558 (master), ebb5823e9 (tqtc/lts-5.15), 31db5f58a (tqtc/lts-6.2)
-
2023wk14FOQtforAndroid
On systems where the Android build platform: android-33-ext5 or android-33-ext4 installed (this includes GitHub Ubuntu runners), the tool androiddeployqt does not work. It fails with the following error message below. A relevant example is
https://github.com/Akaflieg-Freiburg/addhoursandminutes/actions/runs/4567491867/jobs/8061350762
Generating Android Package Input file: /home/runner/work/addhoursandminutes/addhoursandminutes/build/src/android-addhoursandminutes-deployment-settings.json Output directory: /home/runner/work/addhoursandminutes/addhoursandminutes/build/src/android-build/ Application binary: addhoursandminutes Android build platform: android-33-ext4 Install to device: No Warning: QML import could not be resolved in any of the import paths: QtQuick.Controls.Windows Warning: QML import could not be resolved in any of the import paths: QtQuick.Controls.macOS Warning: QML import could not be resolved in any of the import paths: QtQuick.Controls.iOS Downloading [https://services.gradle.org/distributions/gradle-7.4.2-bin.zip] ...........10%...........20%...........30%...........40%...........50%...........60%...........70%...........80%...........90%...........100% Welcome to Gradle 7.4.2! Here are the highlights of this release: - Aggregated test and JaCoCo reports - Marking additional test source directories as tests in IntelliJ - Support for Adoptium JDKs in Java toolchains For more details see [https://docs.gradle.org/7.4.2/release-notes.html] Starting a Gradle Daemon (subsequent builds will be faster) FAILURE: Build completed with 2 failures. 1: Task failed with an exception. ----------- * Where: Build file '/home/runner/work/addhoursandminutes/addhoursandminutes/build/src/android-build/build.gradle' line: 38 * What went wrong: A problem occurred evaluating root project 'android-build'. > For input string: "ext4" * Try: > Run with --stacktrace option to get the stack trace. > Run with --info or --debug option to get more log output. > Run with --scan to get full insights. ==============================================================================
- duplicates
-
QTBUG-110326 Qt apps cannot be built against an SDK with extensions
-
- Closed
-
- is duplicated by
-
QTBUG-112268 androiddeployqt detects wrong latest SDK version
-
- Closed
-
-
QTBUG-112669 androiddeployqt causes gradle to crash when platform;android-33-ext4 or platform;android-33-ext5 is installed and --android-platform is not specified explicitly
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-112465 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
470665,3 | Android: allow using string based versions in compileSdkVersion | dev | qt/qtbase | Status: MERGED | +2 | 0 |
470668,2 | Android: allow non-integer platform sdk versions | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
470904,2 | Android: allow using string based versions in compileSdkVersion | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
470918,3 | Android: allow using string based versions in compileSdkVersion | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
470942,4 | Android: allow using string based versions in compileSdkVersion | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |